Refactor controllers and services
Refactor queries
Delete ManyToMany fields from Restaurant and User